<resources>
    <string name="app_name">LoginApp</string>
    <string name="name">%s %S</string>
    <string name="title_greeting">Welcome!</string>
    <string name="title_info">Sign in to continue</string>
    <string name="title_email">Email</string>
    <string name="email_hint">Email ID</string>
    <string name="title_password">Password</string>
    <string name="password_hint">Password</string>
    <string name="title_login">Login</string>
    <string name="successful_login_message">Successful Login</string>
</resources>